Day-5/full-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: full-project-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: full-project
  ports:
    - port: 80
      targetPort: 80
