Day-5/full-project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-project-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: full-project-service
                port:
                  number: 80
